applications/SolversApplication/external_libraries/PaStiX_6.0/spm/include/spm.h

/**
 *
 * @brief The sparse matrix data structure
 *
 * This structure describes matrices with different characteristics that can be useful to any
 * solver:
 *     - the storage format (SpmCSC, SpmCSR or SpmIJV)
 *     - the properties (SpmGeneral, SpmHermitian, SpmSymmetric)
 *     - the base value (0 in C or 1 in Fortran)
 *
 * It is also possible to describe a matrix with constant or variable degrees of freedom.
 *
 */
typedef struct spmatrix_s {
    spm_mtxtype_t  mtxtype; /**< Matrix structure: SpmGeneral, SpmSymmetric
                                 or SpmHermitian.                                               */
    spm_coeftype_t flttype; /**< values datatype: SpmPattern, SpmFloat, SpmDouble,
                                 SpmComplex32 or SpmComplex64                                   */
    spm_fmttype_t  fmttype; /**< Matrix storage format: SpmCSC, SpmCSR, SpmIJV                  */

    spm_int_t      gN;      /**< Global number of vertices in the compressed graph (Computed)   */
    spm_int_t      n;       /**< Local number of vertices in the compressed graph               */
    spm_int_t      gnnz;    /**< Global number of non zeroes in the compressed graph (Computed) */
    spm_int_t      nnz;     /**< Local number of non zeroes in the compressed graph             */

    spm_int_t      gNexp;   /**< Global number of vertices in the compressed graph (Computed)   */
    spm_int_t      nexp;    /**< Local number of vertices in the compressed graph (Computed)    */
    spm_int_t      gnnzexp; /**< Global number of non zeroes in the compressed graph (Computed) */
    spm_int_t      nnzexp;  /**< Local number of non zeroes in the compressed graph (Computed)  */

    spm_int_t      dof;     /**< Number of degrees of freedom per unknown,
                                 if > 0, constant degree of freedom
                                 otherwise, irregular degree of freedom (refer to dofs)         */
    spm_int_t     *dofs;    /**< Array of the first column of each element in the
                                 expanded matrix [+baseval]                                     */
    spm_layout_t   layout;  /**< SpmColMajor, or SpmRowMajor                                    */

    spm_int_t     *colptr;  /**< List of indirections to rows for each vertex [+baseval]        */
    spm_int_t     *rowptr;  /**< List of edges for each vertex [+baseval]                       */
    spm_int_t     *loc2glob;/**< Corresponding numbering from local to global [+baseval]        */
    void          *values;  /**< Values stored in the matrix                                    */
} spmatrix_t;
/**
 * @name SPM basic subroutines
 * @{
 */
void spmInit ( spmatrix_t *spm );
void spmAlloc( spmatrix_t *spm );
void spmExit ( spmatrix_t *spm );
spmatrix_t *spmCopy( const spmatrix_t *spm );
void        spmBase( spmatrix_t *spm, int baseval );
spm_int_t   spmFindBase( const spmatrix_t *spm );
int         spmConvert( int ofmttype, spmatrix_t *ospm );
void        spmUpdateComputedFields( spmatrix_t *spm );
void        spmGenFakeValues( spmatrix_t *spm );
/**
 * @}
 * @name SPM BLAS subroutines
 * @{
 */
double spmNorm( spm_normtype_t ntype, const spmatrix_t *spm );
int    spmMatVec( spm_trans_t trans, double alpha, const spmatrix_t *spm, const void *x, double beta, void *y );
int    spmMatMat( spm_trans_t trans, spm_int_t n,
                  double alpha, const spmatrix_t *A,
                                const void *B, spm_int_t ldb,
                  double beta,        void *C, spm_int_t ldc );
void   spmScalMatrix( double alpha, spmatrix_t *spm );
void   spmScalVector( spm_coeftype_t flt, double alpha, spm_int_t n, void *x, spm_int_t incx );
/**
 * @}
 * @name SPM subroutines to check format
 * @{
 */
int       spmSort( spmatrix_t *spm );
spm_int_t spmMergeDuplicate( spmatrix_t *spm );
spm_int_t spmSymmetrize( spmatrix_t *spm );
int       spmCheckAndCorrect( const spmatrix_t *spm_in, spmatrix_t *spm_out );
/**
 * @}
 * @name SPM subroutines to check factorization/solve
 * @{
 */
int spmGenRHS( spm_rhstype_t     type,
               spm_int_t         nrhs,
               const spmatrix_t *spm,
               void * const      x,
               spm_int_t         ldx,
               void * const      b,
               spm_int_t         ldb );
int spmCheckAxb( double            eps,
                 spm_int_t         nrhs,
                 const spmatrix_t *spm,
                 void * const      x0,
                 spm_int_t         ldx0,
                 void * const      b,
                 spm_int_t         ldb,
                 const void *      x,
                 spm_int_t         ldx );
/**
 * @}
 * @name SPM subroutines to manipulate integers arrays
 * @{
 */
spm_int_t *spmIntConvert( spm_int_t n, int *input );
/**
 * @}
 * @name SPM IO subroutines
 * @{
 */
int spmLoad( spmatrix_t *spm, FILE *infile );
int spmSave( const spmatrix_t *spm, FILE *outfile );
/**
 * @}
 * @name SPM driver
 * @{
 */
int spmReadDriver( spm_driver_t driver,
                   const char  *filename,
                   spmatrix_t  *spm );
int spmParseLaplacianInfo( const char *    filename,
                           spm_coeftype_t *flttype,
                           spm_int_t *     dim1,
                           spm_int_t *     dim2,
                           spm_int_t *     dim3,
                           double *        alpha,
                           double *        beta );
/**
 * @}
 * @name SPM debug subroutines
 * @{
 */
void *      spm2Dense( const spmatrix_t *spm );
void        spmPrint( const spmatrix_t *spm, FILE *f );
void        spmPrintInfo( const spmatrix_t *spm, FILE *f );
spmatrix_t *spmExpand( const spmatrix_t *spm );
spmatrix_t *spmDofExtend( const spmatrix_t *spm, const int type, const int dof );